@@ -49,6 +49,7 @@ struct test_io_private {
 };
 
 /* s3backer_store functions */
+static int test_io_create_threads(struct s3backer_store *s3b);
 static int test_io_meta_data(struct s3backer_store *s3b, off_t *file_sizep, u_int *block_sizep);
 static int test_io_set_mount_token(struct s3backer_store *s3b, int32_t *old_valuep, int32_t new_value);
 static int test_io_read_block(struct s3backer_store *s3b, s3b_block_t block_num, void *dest,
@@ -75,6 +76,7 @@ test_io_create(struct http_io_conf *config)
     /* Initialize structures */
     if ((s3b = calloc(1, sizeof(*s3b))) == NULL)
         return NULL;
+    s3b->create_threads = test_io_create_threads;
     s3b->meta_data = test_io_meta_data;
     s3b->set_mount_token = test_io_set_mount_token;
     s3b->read_block = test_io_read_block;
@@ -97,6 +99,12 @@ test_io_create(struct http_io_conf *config)
 
     /* Done */
     return s3b;
+}
+
+static int
+test_io_create_threads(struct s3backer_store *s3b)
+{
+    return 0;
 }
 
 static int
